素材定向 & 移除 Redis 素材
