# routers/router.go
@@ -61,8 +61,11 @@ func InitRouter() *gin.Engine {
 
 	consoleApp := r.Group("/trailer_api/console")
 	{
-		//清洗 Redis 素材数据
+		//重写 Redis 素材数据 - 根据排序 - display_order
 		consoleApp.GET("reset_asset", console.ResetAsset)
+
+		//从 Redis 移除指定素材信息  - 异常数据清理
+		consoleApp.GET("remove_asset/:id", console.RemoveAsset)
 	}
 
 	testApp := r.Group("/trailer_api/test")
